# Qualification-task-for-StarLine-hackathon

./: .gitignore  README.md  my_map.pgm  my_map.yaml  tatus
src/icp_package/: CMakeLists.txt  package.xml
src/icp_package/src/: ICP_node.cpp
src/marker_detection/: package.xml  readme.txt  setup.py
src/marker_detection/marker_detection/: marker_detector.py
src/odom_tf/: package.xml  readme.txt  setup.cfg  setup.py  test_launch.py
src/odom_tf/launch/: test_launch.py
src/odom_tf/odom_tf/: odom_tf_node.py
src/odom_tf/rviz/: RViz_config.rviz
src/slam/: marker_coordinates.csv  package.xml  readme.txt  setup.py
src/slam/bags/: metadata.yaml
src/slam/launch/: pointcloud_to_laserscan_launch.py
src/slam/rviz/: slam.rviz
src/slam/slam/: marker_publisher.py  pointcloud_to_laserscan.py
src/slam/tb_office_v02/: metadata.yaml
