<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lena.wty@mail.ru">lena</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>ros2bag</exec_depend>
  <exec_depend>rosbag2_storage_mcap</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
